@@ -3,6 +3,8 @@ This file lists the incompatible changes between Version 2.x and older versions
 
   - t_STR used to compare as larger than any real number via < or >
     operators. Such a comparison now raises an exception.
+  - valuation(0,p), nfeltval(nf,0,pr), idealval(nf,0) now all return +oo
+    under GP [ used to return LONG_MAX ]
 
 * Specific to the PARI library:
 ===============================
