@@ -1,7 +1,7 @@
 Function: valuation
 Section: conversions
-C-Name: gvaluation
-Prototype: lGG
+C-Name: gpvaluation
+Prototype: GG
 Help: valuation(x,p): valuation of x with respect to p.
 Doc:
  computes the highest
@@ -15,7 +15,10 @@ Doc:
  valuation of a vector, complex or quadratic number is the minimum of the
  component valuations.
 
- If $x=0$, the result is \tet{LONG_MAX} ($2^{31}-1$ for 32-bit machines or
- $2^{63}-1$ for 64-bit machines) if $x$ is an exact object. If $x$ is a
+ If $x=0$, the result is \kbd{+oo} if $x$ is an exact object. If $x$ is a
  $p$-adic numbers or power series, the result is the exponent of the zero.
  Any other type combinations gives an error.
+
+Variant: Also available is
+ \fun{long}{gvaluation}{GEN x, GEN p}, which returns \tet{LONG_MAX} if $x = 0$
+ and the valuation as a \kbd{long} integer.
