@@ -1505,6 +1505,7 @@ GEN     RgM_to_nfM(GEN nf,GEN x);
 GEN     RgX_to_nfX(GEN nf,GEN pol);
 GEN     algtobasis(GEN nf, GEN x);
 GEN     basistoalg(GEN nf, GEN x);
+GEN     gpnfvalrem(GEN nf, GEN x, GEN pr, GEN *py);
 GEN     ideallist(GEN nf,long bound);
 GEN     ideallist0(GEN nf,long bound, long flag);
 GEN     ideallistarch(GEN nf, GEN list, GEN arch);
@@ -1577,6 +1578,7 @@ GEN     famat_to_nf(GEN nf, GEN f);
 GEN     famat_to_nf_modideal_coprime(GEN nf, GEN g, GEN e, GEN id, GEN EX);
 GEN     famat_to_nf_moddivisor(GEN nf, GEN g, GEN e, GEN bid);
 GEN     famatsmall_reduce(GEN fa);
+GEN     gpidealval(GEN nf, GEN ix, GEN P);
 GEN     idealtwoelt(GEN nf, GEN ix);
 GEN     idealtwoelt0(GEN nf, GEN ix, GEN a);
 GEN     idealtwoelt2(GEN nf, GEN x, GEN a);
@@ -2347,6 +2349,7 @@ GEN     gcvtop(GEN x, GEN p, long r);
 int     gequal(GEN x, GEN y);
 int     gequalsg(long s, GEN x);
 long    gexpo(GEN x);
+GEN     gpvaluation(GEN x, GEN p);
 long    gvaluation(GEN x, GEN p);
 int     gidentical(GEN x, GEN y);
 long    glength(GEN x);
