@@ -1,12 +1,10 @@
 default(realprecision,38);
 a = [0, 1, 1/3, 1.0, Mod(1,2), Mod(1,3), ffgen(Mod(1,3)*(x^2+1)), 2*I, 3 + O(3^2), Mod(x,x^2+1), 2*x + 2, 3*(x +O(x^2)) ];
 b = [2, 3, x, x^2+1 ];
-OO = valuation(0, 2);
 {
 for (i = 1, #a,
   for(j = 1, #b,
     v = iferr(valuation(a[i],b[j]), E, "ERROR");
-    if (v == OO, v = "oo");
     print1(v, " ")
   );
   print()
@@ -21,6 +19,6 @@ s=Mod(1,3)*(1+x); valuation((s+O(x^2)) - s,x)
 \\ #1336
 1./(x+1)+O(x^2)
 \\ #1345
-valuation(0*x,3) == OO
+valuation(0*x,3) == oo
 
 1+O(x)-1
